--- a/app/views/tipo_actividad_turisticas/show.html.erb
+++ b/app/views/tipo_actividad_turisticas/show.html.erb
@@ -24,12 +24,14 @@
 							<p><strong>Descripcion:</strong></p>
 							<p><strong>Foto:</strong></p>
 							<p><strong>Icono:</strong></p>
+							<p><strong>Visible:</strong></p>
 						</div>
 						<div class="col-lg-9 col-md-9">
 							<p><%= @tipo_actividad_turistica.tiAcT_nombre %></p>
 							<p><%= @tipo_actividad_turistica.tiAcT_descripcion %>&nbsp;</p>
 							<p><%= @tipo_actividad_turistica.tiAcT_foto %>&nbsp;</p>
 							<p><%= @tipo_actividad_turistica.tiAcT_icono %>&nbsp;</p>
+							<p><%= @tipo_actividad_turistica.tiAcT_visibilidad %>&nbsp;</p>
 							<p>&nbsp;</p>
 						</div>
 
