--- a/app/views/modelos/_form.html.erb
+++ b/app/views/modelos/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@modelo) do |f| %>
 	<% if @modelo.errors.any? %>
     	<div id="error_explanation">
-      		<h2><%= pluralize(@modelo.errors.count, "error") %> prohibited this region from being saved:</h2>
+      		<h2><%= pluralize(@modelo.errors.count, "error") %> prohibited this modelo from being saved:</h2>
   			<ul>
       			<% @modelo.errors.full_messages.each do |message| %>
         		<li><%= message %></li>
