--- a/app/views/reservas/_form.html.erb
+++ b/app/views/reservas/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@reserva) do |f| %>
   <% if @reserva.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@reserva.errors.count, "error") %> prohibited this reserva from being saved:</h2>
+      <h2><%= pluralize(@reserva.errors.count, "error") %> prohibited this control from being saved:</h2>
 
       <ul>
       <% @reserva.errors.full_messages.each do |message| %>
@@ -10,52 +10,91 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :rsrv_codigo %><br>
-    <%= f.text_field :rsrv_codigo %>
-  </div>
-  <div class="field">
-    <%= f.label :rsrv_tipoProducto %><br>
-    <%= f.text_field :rsrv_tipoProducto %>
-  </div>
-  <div class="field">
-    <%= f.label :rsrv_productoId %><br>
-    <%= f.number_field :rsrv_productoId %>
-  </div>
-  <div class="field">
-    <%= f.label :rsrv_tipoSolicitante %><br>
-    <%= f.text_field :rsrv_tipoSolicitante %>
-  </div>
-  <div class="field">
-    <%= f.label :rsrv_solicitanteId %><br>
-    <%= f.text_field :rsrv_solicitanteId %>
-  </div>
-  <div class="field">
-    <%= f.label :rsrv_tipoContacto %><br>
-    <%= f.text_field :rsrv_tipoContacto %>
-  </div>
-  <div class="field">
-    <%= f.label :rsrv_contactoId %><br>
-    <%= f.text_field :rsrv_contactoId %>
-  </div>
-  <div class="field">
-    <%= f.label :rsrv_estadoReserva, "Estado Reserva" %><br>
-    <%= f.text_field :rsrv_estadoReserva  %>
-  </div>
-  <div class="field">
-    <%= f.label :rsrv_fechaVencimiento %><br>
-    <%= f.datetime_select :rsrv_fechaVencimiento %>
-  </div>
-  <div class="field">
-    <%= f.label :created_by %><br>
-    <%= f.text_field :created_by %>
-  </div>
-  <div class="field">
-    <%= f.label :updated_by %><br>
-    <%= f.text_field :updated_by %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+	<div class="col-lg-11 col-md-11" id="form-wrapper">
+  		<div id="tm-form-header">
+			<h1><%= @titulo %></h1>
+		</div>
+		<div id="tm-form-content">
+			<div class="col-lg-12">
+				<div class="col-lg-6">
+				  	<div class="form-group">
+		    			<%= f.label :rsrv_codigo, "Codigo" %><br>
+		    			<%= f.text_field :rsrv_codigo, options={class:"form-control", readonly: :readonly} %>
+		  			</div>
+		  		</div>
+		  		<div class="col-lg-6">
+		  			<div class="form-group">
+		    			<%= f.label :rsrv_tipoProducto, "Tipo de producto*" %><br>
+		    			<%= f.text_field :rsrv_tipoProducto, options={class:"form-control", readonly: :readonly}  %>
+		  			</div>
+		  		</div>
+	  		</div>
+	  		<div class="col-lg-12">
+				<div class="col-lg-6">
+  					<div class="form-group">
+    					<%= f.label :rsrv_productoId, "ID Producto*" %><br>
+    					<%= f.number_field :rsrv_productoId, options={class:"form-control", readonly: :readonly}  %>
+  					</div>
+  				</div>
+  				<div class="col-lg-6">
+  					<div class="form-group">
+					    <%= f.label :rsrv_contactoId, "Contacto" %><br>
+					    <%= f.text_field :rsrv_contactoId , options={class:"form-control", readonly: :readonly}  %>
+  					</div>
+  				</div>
+  			</div>
+  			<div class="col-lg-12">
+  				<div class="col-lg-6">
+  					<div class="form-group">
+    					<%= f.label :rsrv_solicitanteId, "Solicitante" %><br>
+    					<%= f.text_field :rsrv_solicitanteId , options={class:"form-control", readonly: :readonly}  %>
+  					</div>
+  				</div>
+  				<div class="col-lg-6">
+  					<div class="form-group">
+					    <%= f.label :rsrv_estadoReserva, "Estado Reserva" %><br>
+					    <%= f.text_field :rsrv_estadoReserva  , options={class:"form-control"}  %>
+  					</div>
+  				</div>
+  			</div>
+	  <div class="field">
+	    <%#= f.label :created_by %><br>
+	    <%= f.hidden_field :created_by %>
+	  </div>
+	  <div class="field">
+	    <%#= f.label :updated_by %><br>
+	    <%= f.hidden_field :updated_by %>
+	  </div>
+  		</div>
+		<div id="tm-form-footer">
+			<div class="actions">
+				<script>
+					$(document).on('page:update', function() {
+						$("#cmd_aceptar").click(function(e){
+							<% if params[:action] == "edit" then %>
+								$('#<%= params[:action] %>_reserva_<%= @reserva.id %>').submit();
+							<% elsif params[:action] == "new" or params[:action] == "create"%>
+								$('#<%= params[:action] %>_reserva').submit();
+							<% end %>
+							e.preventDefault();
+						});
+					});
+				</script>
+				
+				<%= link_to 'Regresar', reservas_path , class:"button back" %> |
+				<%= link_to 'Aceptar', nil, class:"button save", id:"cmd_aceptar" %>
+				<% if params[:action] == "edit" then %>
+					<% path = request.fullpath %>
+					<% path["/edit"]="" %>
+					| <%= link_to 'Consultar', path, class:"button find" %>
+				<% end %> 
+			</div>
+		</div>
+	</div>
 <% end %>
+
+<script>
+	$(function(){
+		 $( document ).trigger( "page:update" );
+	});
+</script>
