--- a/app/views/reservas/index.html.erb
+++ b/app/views/reservas/index.html.erb
@@ -39,7 +39,7 @@
 						<div class="col-lg-12">
 							<div class="col-lg-3">
 								<div class="form-group">
-									<div class='input-group date' id='datetimepicker1'>
+									<div class='input-group dateReservas' id='datetimepicker1'>
 										<%= text_field_tag :viaje_fechaIni, nil, options={class:"form-control", placeholder: "FECHA DE VIAJE (INICIO)"} %>
 		                				<span class="input-group-addon">
 									    	<span class="fa fa-calendar"></span>
@@ -49,7 +49,7 @@
 							</div>
 							<div class="col-lg-3">
 								<div class="form-group">
-									<div class='input-group date' id='datetimepicker2'>
+									<div class='input-group dateReservas' id='datetimepicker2'>
 										<%= text_field_tag :viaje_fechaFin, nil, options={class:"form-control", placeholder: "FECHA DE VIAJE (FIN)"} %>
 		                				<span class="input-group-addon">
 									    	<span class="fa fa-calendar"></span>
@@ -74,49 +74,50 @@
 							</center>
 						</div>
 					<% end %>
-
-					<table id="indexTable" class="stripe hover">
-					  	<thead>
-					    	<tr>
-						      <th>Código</th>
-						      <th>Producto</th>
-						      <th>Ruta</th>
-						      <th>Fecha Ida</th>
-						      <th>Fecha Regreso</th>
-						      <th>Pasajero</th>
-						      <th>Vendedor</th>
-						      <th colspan="3"></th>
-    						</tr>
-  						</thead>
-					  	<tbody>
-					  		<% unless @reservas.nil? %>
-								<% @reservas.each do |reserva| %>
-							    	<tr>
-							        	<td><%= reserva.rsrv_codigo %></td>
-							        	<td><%= reserva.rsrv_tipoProducto %></td>
-							        	<td><%= set_descripcion_ruta(reserva.rsrv_trayectoViaje)%> </td>
-								        <td><%= reserva.rsrv_fechaIda %></td>
-								        <td><%= reserva.rsrv_fechaRegreso %>&nbsp;</td>
-								        <td><%= reserva.pers_nombres + " " + reserva.pers_apellidos %></td>
-								        <td><%= reserva.vendedor %></td>
-						        		<td><%= link_to(reserva, class:"btn btn-info") do %>
-						        				<i class="fa fa-book"></i>
-						        			<% end %>
-						        		</td>
-						        		<td><a href="<%= edit_reserva_path(reserva) %>" class="btn btn-warning">
-						        				<i class="fa fa-edit"></i>
-						        			</a>
-						        		</td>
-						        		<td>
-						        			<a data-confirm="¿Está seguro(a) de eliminar este registro?" class="btn btn-danger" rel="nofollow" data-method="delete" href=<%= "/reservas/#{reserva.id}"%> >
-						        				<i class="fa fa-trash"></i>
-						        			</a>
-						        		</td>
-	      							</tr>
-	    						<% end %>
-	    					<% end %>
-  						</tbody>
-					</table>
+					<div class="col-lg-12 col-md-12">
+						<table id="indexTable" class="stripe hover">
+						  	<thead>
+						    	<tr>
+							      <th>Código</th>
+							      <th>Producto</th>
+							      <th>Ruta</th>
+							      <th>Fecha Ida</th>
+							      <th>Fecha Regreso</th>
+							      <th>Pasajero</th>
+							      <th>Vendedor</th>
+							      <th colspan="3"></th>
+	    						</tr>
+	  						</thead>
+						  	<tbody>
+						  		<% unless @reservas.nil? %>
+									<% @reservas.each do |reserva| %>
+								    	<tr>
+								        	<td><%= reserva.rsrv_codigo %></td>
+								        	<td><%= reserva.rsrv_tipoProducto %></td>
+								        	<td><%= set_descripcion_ruta(reserva.rsrv_trayectoViaje)%> </td>
+									        <td><%= reserva.rsrv_fechaIda %></td>
+									        <td><%= reserva.rsrv_fechaRegreso %>&nbsp;</td>
+									        <td><%= reserva.pers_nombres + " " + reserva.pers_apellidos %></td>
+									        <td><%= reserva.vendedor %></td>
+							        		<td><%= link_to(reserva, class:"btn btn-info") do %>
+							        				<i class="fa fa-book"></i>
+							        			<% end %>
+							        		</td>
+							        		<td><a href="<%= edit_reserva_path(reserva) %>" class="btn btn-warning">
+							        				<i class="fa fa-edit"></i>
+							        			</a>
+							        		</td>
+							        		<td>
+							        			<a data-confirm="¿Está seguro(a) de eliminar este registro?" class="btn btn-danger" rel="nofollow" data-method="delete" href=<%= "/reservas/#{reserva.id}"%> >
+							        				<i class="fa fa-trash"></i>
+							        			</a>
+							        		</td>
+		      							</tr>
+		    						<% end %>
+		    					<% end %>
+	  						</tbody>
+						</table>
+					</div>
 					<div class="section-footer">
 						<%= link_to 'Regresar', administracion_path , class:"button back" %>
 						<%= link_to 'Nueva reserva', new_reserva_path, class:"button add" %>
@@ -142,7 +143,7 @@
 	});
 	
 	$(document).on("page:update", function(){
-		$('.date').datetimepicker({
+		$('.dateReservas').datetimepicker({
         	format: 'YYYY-MM-DD',
         	defaultDate:false
         });
@@ -151,6 +152,9 @@
         	e.preventDefault();
         	$("#frmBuscar").submit();
         });
+        
+       	$("#viaje_fechaIni").val("");
+        $("#viaje_fechaFin").val("");
 	});
 	
 	$(function() {
