--- a/app/views/reservas/new.html.erb
+++ b/app/views/reservas/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Reserva</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', reservas_path %>
+<section class="tm-white-bg section-padding-bottom" id="contenido">
+	<div class="container">
+		<div class="row">
+			<%= render 'form' %>
+		</div>
+	</div>
+</section>
