--- a/app/views/reservas/show.html.erb
+++ b/app/views/reservas/show.html.erb
@@ -20,7 +20,20 @@
 					</div>
 					<div id="tm-form-content">
 						<div class="col-lg-12">
-							<table class="slider-abstract">
+							<ul class="nav nav-tabs tm-white-bg" role="tablist" id="generalTabs">
+						    	<li role="presentation" class="active">
+									<a href="#general" aria-controls="datos" role="tab" data-toggle="tab">DATOS BASICOS</a>
+						    	</li>
+						    	<li role="presentation">
+						    		<a href="#pagos" aria-controls="hotel" role="tab" data-toggle="tab">PAGOS</a>
+						    	</li>
+							</ul>
+							<!-- Tab panes -->
+							<div class="tab-content margin-bottom-30">
+								<div role="tabpanel" class="tab-pane fade in active tm-white-bg" id="general">
+									<div class="tm-search-box overflow-auto">
+										
+								<table class="slider-abstract">
 									<tr>
 										<th colspan="4"><%= @producto %></th>
 										<th colspan="3"><strong>NRO. DE PASAJEROS</strong></th>
@@ -40,15 +53,30 @@
 										<th><strong>FECHA DE REGRESO</strong></th>
 										<td><%= @reserva.rsrv_fechaRegreso %></td>
 										<td class="center"><label id="lblAdultos"></label></td>
-										<td class="center"><label id="lblMenores"></label></td>0
+										<td class="center"><label id="lblMenores"></label></td>
 										<td class="center"><label id="lblInfantes"></label></td>
 									</tr>
 									<tr>
-										<th>RESERVA</th>
+										<th>RESERVA</th>	
 										<td><h3><strong><%= @reserva.rsrv_codigo %></strong></h3></td>
 										<th><strong>ESTADO</strong></th>
 										<td><%= @hshEstadosReserva[@reserva.rsrv_estadoReserva] %></td>
 									</tr>
+							</table>
+							<p>&nbsp;</p>
+							<table class="datos-persona">
+								<thead>
+									<tr>
+										<th colspan="5">SERVICIOS OPCIONALES</th>
+									</tr>
+								</thead>
+								<tbody>
+									<% @servOpcReserva.each do |h| %>
+										<tr>
+											<td><%= h.actur_descripcion %></td>
+										</tr>
+									<% end %>
+								</tbody>
 							</table>
 							<p>&nbsp;</p>
 							<table class="datos-persona">
@@ -124,6 +152,67 @@
 									</tr>
 								</tbody>
 							</table>
+						</div>
+						</div><!-- TAB Datos Basicos -->
+						<div role="tabpanel" class="tab-pane fade in tm-white-bg" id="pagos">
+							<div class="tm-search-box overflow-auto">
+								<table class="datos-persona">
+									<thead>
+										<tr>
+											<th colspan="5">RELACIÓN DE PAGOS</th>
+										</tr>
+										<tr>
+											<th>NRO</th>
+											<th>FECHA DE PAGO</th>
+											<th>CANAL</th>
+											<th>VALOR</th>
+											<th>ID TRANSACCION</th>
+										</tr>
+									</thead>
+									<tbody>
+										<% index = 1 %>
+										<% valorPagadoReserva = 0%>
+										<% @pagos.each do |h| %>
+											<% valorPagadoReserva = valorPagadoReserva + h.pago_valor %>
+											<tr>
+												<td><%= index %></td>
+												<td><%= h.pago_fecha %></td>
+												<td><%= "OFICINA" %></td>
+												<td><%= number_to_currency(h.pago_valor) %></td>
+												<td><%= h.pago_transaccion %></td>
+											</tr>
+											<% index = index + 1 %>
+										<% end %>
+									</tbody>
+								</table>
+								<br>
+								<table class="datos-persona">
+									<thead>
+										<tr>
+											<th colspan="2">RESUMEN</th>
+										</tr>
+										<tr>
+											<th>CONCEPTO</th>
+											<th>VALOR</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Valor total de la reserva</td>
+											<td><%= number_to_currency(@valorTotalReserva)  %></td>
+										</tr>
+										<tr>
+											<td>Valor de pagos recibidos</td>
+											<td><%= number_to_currency(valorPagadoReserva) %></td>
+										</tr>
+											<td>Saldo pendiente a la fecha</td>
+											<td><%= number_to_currency(@valorTotalReserva - valorPagadoReserva) %></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+						</div>
   					</div>
 					<div id="tm-form-footer">
 						<%= link_to 'Regresar', reservas_path, class:"button back" %> |
