--- a/app/views/ruta/_form.html.erb
+++ b/app/views/ruta/_form.html.erb
@@ -37,7 +37,7 @@
 			<div class="col-lg-12 col-md-12">
 				<div class="form-group">
 			    	<%= f.label :ruta_medio, "Medio*" %><br>
-			    	<%= f.select :ruta_medio, options_for_select([["ACUÁTICO", "ACUÁTICO"], ["AÉREO", "AÉREO"], ["TERRESTRE", "TERRESTRE"]], @rutum.ruta_medio) ,{prompt: "-- SELECCIONE --"},options={class:"form-control"} %>
+			    	<%= f.select :ruta_medio, options_for_select([["ACUATICO", "ACUÁTICO"], ["AEREO", "AÉREO"], ["TERRESTRE", "TERRESTRE"]], @rutum.ruta_medio) ,{prompt: "-- SELECCIONE --"},options={class:"form-control"} %>
 			  	</div>
 				<div class="form-group">
 			    	<%= f.label :ruta_prioridad, "Prioridad*" %><br>
